GNOME Bugzilla – Bug 710993
Filesystem is marked readonly but it isn't
Last modified: 2013-10-31 19:49:48 UTC
Since items can be deleted from the recent backend, the filesystem should not be marked read-only.
Created attachment 258276 [details] [review] recent: Don't mark filesystem as read-only The filesystem should not be marked as read-only since items can be deleted from it.
New items cannot be created though, and there should probably be a way to communicate that.
(In reply to comment #2) > New items cannot be created though, and there should probably be a way to > communicate that. Isn't that communicated by the attribute "access::can-write: FALSE" on recent:/// ? The trash backend seems pretty similar and *doesn't* set the filesystem to readonly.
Fair enough.
Pushed to master as 154a57ca. Thanks!