recent: Don't mark filesystem as read-only

The filesystem should not be marked as read-only since items can be
deleted from it.

https://bugzilla.gnome.org/show_bug.cgi?id=710993